<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="40dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/menu"
            android:textAllCaps="true"
            android:textColor="#611F1F"
            android:textSize="77sp" />

    </FrameLayout>


    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frameLayout"
        android:layout_alignEnd="@id/menuItemsView"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E2ADAD"
        android:foregroundGravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:text="@string/item_name"
            android:textColor="#611F1F"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:text="@string/price"
            android:textColor="#611F1F"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:text="@string/count"
            android:textColor="#611F1F"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|center_vertical"
            android:text="@string/total"
            android:textColor="#611F1F"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/menuItemsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topPanel"
        android:layout_gravity="center"
        android:scrollbars="vertical">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/bottomPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/menuItemsView"
        android:layout_centerInParent="true"
        android:foregroundGravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submitOrder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#E2ADAD"
            android:text="@string/place_order"
            android:textColor="#611F1F"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>