<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <TextView
        android:id="@+id/itemName"
        android:layout_width="150dp"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:maxLines="6"
        android:padding="16dp"
        android:scrollbars="vertical"
        android:text="@string/item_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="86dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/item_price"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintEnd_toStartOf="@+id/itemCount"
        app:layout_constraintStart_toEndOf="@+id/itemName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemCount"
        android:layout_width="wrap_content"
        android:layout_height="86dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/item_total"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sub_button"
        app:layout_constraintEnd_toStartOf="@+id/totalItemPrice"
        app:layout_constraintStart_toEndOf="@+id/itemPrice"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/totalItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="86dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:gravity="center|center_vertical"
        android:padding="16dp"
        android:text="@string/item_total"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sub_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemCount"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="142dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#E2ADAD"
        android:text="@string/add_counter_button"
        android:textColor="#611F1F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemName"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/sub_button"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/subtract_counter_button"
        android:textColor="#611F1F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/add_button"
        app:layout_constraintTop_toBottomOf="@+id/itemPrice"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>