<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="40dp"
            android:text="@string/your_cart"
            android:textColor="#611F1F"
            android:textSize="77sp" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center|center_vertical"
        android:text="@string/order_total_string"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/orderTotalCartView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout2" />

    <TextView
        android:id="@+id/orderTotalCartView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center|center_vertical"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#611F1F"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@id/frameLayout2" />

    <LinearLayout
        android:id="@+id/bottomPanelCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/frameLayout2"
        app:layout_constraintTop_toBottomOf="@id/orderTotalCartView">

        <Button
            android:id="@+id/placeOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#E4B7B7"
            android:text="@string/place_order"
            android:textColor="#611F1F" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>